# korrecte

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  korrecte.toml  lints.yaml
.github/workflows/: docker.yml  rust.yml
deploy/: korrecte.yaml
korrecte-autogen/: Cargo.toml
korrecte-autogen/src/: main.rs
korrecte-cli/: Cargo.toml  cli.yaml
korrecte-cli/src/: error.rs  main.rs  view.rs
korrecte-dev/: Cargo.toml
korrecte-dev/src/: main.rs
korrecte-lib/: Cargo.toml
korrecte-lib/src/: error.rs  lib.rs  macros.rs  tests.rs
korrecte-lib/src/config/: mod.rs
korrecte-lib/src/executor/: mod.rs
korrecte-lib/src/kube/: api.rs  api_async.rs  api_async_kube.rs  mod.rs
korrecte-lib/src/kube/file/: loader.rs  repository.rs
korrecte-lib/src/kube/repository/: api_async.rs
korrecte-lib/src/kube/repository/file/: loader.rs  repository.rs
korrecte-lib/src/kube/service/: mod.rs
korrecte-lib/src/linters/: evaluator.rs  lint.rs  mod.rs  wasm.rs
korrecte-lib/src/linters/evaluator/: mod.rs  single_evaluator.rs
korrecte-lib/src/linters/lints/: alb_ingress_instance.rs  alb_named_sg.rs  deprecations.rs  environment_passwords.rs  hpa_no_request.rs  mod.rs  never_restart_with_liveness_probe.rs  overlapping_probes.rs  pdb_min_replicas.rs  pod_requirements.rs  required_labels.rs  role_similar_names.rs  service_target_port.rs  service_without_matching_labels.rs  statefulset_grace_period_zero.rs
korrecte-lib/src/reporting/: mod.rs
korrecte-lib/src/view/: mod.rs
korrecte-lib/src/visitor/: mod.rs  pod_spec.rs
korrecte-shared/: Cargo.toml
korrecte-shared/src/: lib.rs  reporting.rs
korrecte-wasm/: Cargo.toml
korrecte-wasm-macro/: Cargo.toml
korrecte-wasm-macro/src/: lib.rs
korrecte-wasm/src/: lib.rs
korrecte-web/: Cargo.toml
korrecte-web/src/: main.rs
kubeclient/: Cargo.toml
kubeclient/examples/: list.rs
kubeclient/src/: k8s.rs  kubeclient.rs  lib.rs
kubeclient/src/config/: file.rs  in_cluster.rs  local.rs  mod.rs  reqwest.rs
src/: cli.yaml  error.rs  main.rs  tests.rs
src/config/: mod.rs
src/kube/: api.rs  api_v2.rs  mod.rs  objects.rs
src/kube/file/: loader.rs  mod.rs  repository.rs
src/linters/: evaluator.rs  lint.rs  mod.rs  never_restart_with_liveness_probe.rs  overlapping_probes.rs  required_labels.rs
src/linters/lints/: environment_passwords.rs  mod.rs  never_restart_with_liveness_probe.rs  overlapping_probes.rs  pdb_min_replicas.rs  pod_requirements.rs  required_labels.rs  service_without_matching_labels.rs  statefulset_grace_period_zero.rs
src/reporting/: mod.rs
src/view/: cli.rs  mod.rs
src/visitor/: pod_spec.rs
tests/: alb_ingress.yaml  alb_ingress_ext.yaml  alb_named_sg.yaml  hpa_no_request.yaml  missconfigured_pdb.yaml  never_restart.yaml  overlapping_probes.yaml  pdb_deployment_ok.yaml  pdb_hpa_missconfigured.yaml  pdb_hpa_ok.yaml  pod_requirements.yaml  pod_requirements_ko.yaml  role_similar_names_cluster_role.yaml  role_similar_names_role.yaml  secret_on_env_var.yaml  service_target_port.yaml  service_without_matching_labels.yml  statefulset_graceperiod.yaml
