[package]
name = "korrecte"
version = "0.1.0"
authors = ["Guillem Nieto <gnieto.talo@gmail.com>"]
edition = "2018"

[dependencies]
kube = { version = "0.11.0", features = ["openapi"] }
k8s-openapi = { version = "0.4.0", features = ["v1_13"] }
serde_yaml = "0.8"
serde_json = "1.0"
serde = "1.0"
toml = "0.5"
clap = {version = "2.33", features = ["yaml"]}
yaml-rust = "0.4"

colored="1.8.0"