[package]
name = "korrecte"
version = "0.1.0"
authors = ["Guillem Nieto <gnieto.talo@gmail.com>"]
edition = "2018"

[dependencies]
k8s-openapi = { version = "0.4.0", features = ["v1_13"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
toml = "0.5"
clap = {version = "2.33", features = ["yaml"]}
yaml-rust = "0.4"
kube = { path = "../kube-rs", features = ["openapi"] }

colored="1.8.0"