[package]
name = "korrecte"
version = "0.1.0"
authors = ["Guillem Nieto <gnieto.talo@gmail.com>"]
edition = "2018"

[features]
default = []
wasm = ["wasmer-runtime"]

[dependencies]
k8s-openapi = { version = "0.5.1", features = ["v1_15"], default-features = false }
korrecte-shared = { path = "../korrecte-shared", default-features = false, features = ["kubeobjects"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
yaml-rust = "0.4"
kube = {  version = "0.16.1", features = ["openapi"] }

wasmer-runtime = { version = "0.7.0", optional = true }