[package]
name = "korrecte"
version = "0.1.0"
authors = ["Guillem Nieto <gnieto.talo@gmail.com>"]
edition = "2018"

[dependencies]
k8s-openapi = { version = "0.6.0", features = ["v1_16"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
yaml-rust = "0.4"
toml = "0.5"
kubeclient = { path = "../../kubeclient/kubeclient" }
tokio = "0.2.0-alpha.6"
futures = "0.3.1"
pin-utils = "0.1.0-alpha.4"