[package]
name = "korrecte-shared"
version = "0.1.0"
authors = ["Guillem Nieto <gnieto.talo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
kubeobjects = ["kube"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
kube = {  version = "0.16.1", features = ["openapi"], optional = true }