[package]
name = "korrecte-wasm-macro"
version = "0.1.0"
authors = ["Guillem Nieto <gnieto.talo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.2"
proc-macro2 = "1.0.4"
syn = { version = "1.0.5", features = ["full"] }

[lib]
proc-macro = true