[package]
name = "korrecte-wasm"
version = "0.1.0"
authors = ["Guillem Nieto <gnieto.talo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
korrecte-shared = { path = "../korrecte-shared" }
korrecte-wasm-macro = { path = "../korrecte-wasm-macro" }
serde = "1.0.101"
serde_json = "1.0.40"

[lib]
crate-type = ["cdylib"]