[package]
name = "korrecte-web"
version = "0.1.0"
authors = ["Guillem Nieto <gnieto.talo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
korrecte = { path="../korrecte-lib" }
gotham = "*"
hyper = "*"
mime = "*"
serde_json = "*"
anyhow="1.0"