[package]
name = "kubeclient"
version = "0.1.0"
authors = ["Guillem Nieto <gnieto.talo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k8s-openapi = { version = "0.6.0", features = ["v1_16"], default-features = false }
reqwest = "0.10.0-alpha.2"
openssl = "0.10.12"
base64 = "0.11"
serde_json = "1.0"
tokio = "0.2.0-alpha.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
dirs = "2.0"
anyhow = "1.0"
thiserror = "1.0"